feat: 전적검색 기능 구현 (백엔드 API + 프론트엔드 연동)
- [백엔드] SummonerController: GET /api/summoners/{gameName}/{tagLine}, /matches 추가
- [백엔드] SummonerServiceImpl: Riot API 비동기 조합, CompletionException 처리
- [백엔드] MatchController + MatchControllerDocs: match-v1 엔드포인트
- [백엔드] RiotApiClient: getAccount/getSummoner/getLeagueByPuuid/getMatchIds 추가
- [백엔드] DTO 신규: AccountDto, SummonerDto, SummonerProfileResponse, MatchSummaryResponse 등
- [백엔드] SecurityConfig: /api/summoners/** permitAll, ErrorCode: ACCOUNT_NOT_FOUND 추가
- [프론트] summonerApi.ts: ApiResponse 언래핑, 경로 /api/summoners/** 복수형 통일
- [프론트] SummonerDetail.tsx: 중복 key 수정, CDragon image fallback 적용
- [프론트] communityDragonAssets.ts: tftTraitIconUrl 일반 fallback 추가

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>